fix: Adjust line height for project description to improve readability

--- a/styles.css
+++ b/styles.css
@@ -5476,7 +5476,7 @@ body {
 
   .focus-project-item .project-description {
     font-size: 0.7rem;
-    line-height: 1.2;
+    line-height: 1.3;
   }
 
   .focus-project-item .project-tools span:first-child {
@@ -5486,21 +5486,6 @@ body {
   .focus-project-item .project-tools span:last-child {
     font-size: 0.7rem;
   }
-
-  .focus-title {
-    line-height: 1.25;
-    /* Fix cutoff */
-  }
-
-  /* .focus-project-item {
-    min-height: 19px;
-  } */
-
-  /* .project-name,
-  .project-topic {
-    line-height: 1.2;
-  } */
-
 
 }
 
